# redshit-minimal-rs

./: Cargo.toml  README.md
src/: colorramp.rs  main.rs  transition.rs
src/gamma/: gamma_randr.rs  mod.rs
