[package]
name = "redshift-minimal-rs"
version = "0.1.0"
authors = ["Utsav Balar <UtsavBalar1231@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4"
dirs = "4.0"
futures = "0.3"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.xcb]
version = "1.2"
features = ["randr"]
optional = true

[features]
default = ["randr"]
randr = ["xcb"]
